--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/camera": "^5.27.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/http": "^5.27.0",
+    "@ionic-native/network": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/vibration": "^5.27.0",
@@ -32,6 +33,7 @@
     "cordova-plugin-advanced-http": "^2.5.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-vibration": "^3.1.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
@@ -80,7 +82,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-vibration": {}
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android"
